@@ -1,5 +1,5 @@
 /**
- *    Copyright 2009-2018 the original author or authors.
+ *    Copyright 2009-2020 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,14 +15,14 @@
  */
 package org.apache.ibatis.type;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
+class ByteTypeHandlerTest extends BaseTypeHandlerTest {
 
   private static final TypeHandler<Byte> TYPE_HANDLER = new ByteTypeHandler();
 
@@ -36,11 +36,9 @@ public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
   @Override
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
-    when(rs.getByte("column")).thenReturn((byte) 100);
-    assertEquals(new Byte((byte) 100), TYPE_HANDLER.getResult(rs, "column"));
-
-    when(rs.getByte("column")).thenReturn((byte) 0);
-    assertEquals(new Byte((byte) 0), TYPE_HANDLER.getResult(rs, "column"));
+    when(rs.getByte("column")).thenReturn((byte) 100, (byte) 0);
+    assertEquals(Byte.valueOf((byte) 100), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Byte.valueOf((byte) 0), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -54,11 +52,9 @@ public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
   @Override
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
-    when(rs.getByte(1)).thenReturn((byte) 100);
-    assertEquals(new Byte((byte) 100), TYPE_HANDLER.getResult(rs, 1));
-
-    when(rs.getByte(1)).thenReturn((byte) 0);
-    assertEquals(new Byte((byte) 0), TYPE_HANDLER.getResult(rs, 1));
+    when(rs.getByte(1)).thenReturn((byte) 100, (byte) 0);
+    assertEquals(Byte.valueOf((byte) 100), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Byte.valueOf((byte) 0), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -72,11 +68,9 @@ public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
   @Override
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
-    when(cs.getByte(1)).thenReturn((byte) 100);
-    assertEquals(new Byte((byte) 100), TYPE_HANDLER.getResult(cs, 1));
-
-    when(cs.getByte(1)).thenReturn((byte) 0);
-    assertEquals(new Byte((byte) 0), TYPE_HANDLER.getResult(cs, 1));
+    when(cs.getByte(1)).thenReturn((byte) 100, (byte) 0);
+    assertEquals(Byte.valueOf((byte) 100), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Byte.valueOf((byte) 0), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
